--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
     <a-marker preset='hiro'>
-      <a-entity gltf-model="url(https://skfb.ly/pn76u)" scale="0.5 0.5 0.5"></a-entity>
+      <a-entity gltf-model="url(https://github.com/is1111/maderplas/blob/main/shiny_maimu.glb)" scale="0.5 0.5 0.5"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
